--- a/vote/result-app-service.yaml
+++ b/vote/result-app-service.yaml
@@ -7,7 +7,7 @@ metadata:
     name: result-service
     app: demo-voting-app
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
   - port: 80
     targetPort: 80
