--- a/vote/voting-app-service.yaml
+++ b/vote/voting-app-service.yaml
@@ -7,7 +7,7 @@ metadata:
     name: voting-service
     app: demo-voting-app
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
   - port: 80
     targetPort: 80
